# cmake-playground

./: .gitignore  CMakeLists.txt  main.cpp
lib/: lib.cpp  lib.h
src/: main.cpp
